networkpolicy/2/pod-agent.yaml
apiVersion: v1
kind: Pod
metadata:
  name: agent
  namespace: firewall
  labels:
    app: agent
spec:
  containers:
    - name: agent
      image: 1pro/exam
      ports:
        - containerPort: 8080
