networkpolicy/2/networkpolicy-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: firewall
spec:
  podSelector:
    matchLabels:
      allow-all: "true"
  policyTypes:
  - Ingress
  - Egress
  egress: []
  ingress: []
