networkpolicy/2/networkpolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db
  namespace: firewall
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          allow-db: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          allow-db: "true"
