networkpolicy/2/networkpolicy-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front
  namespace: firewall
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          allow-front: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          allow-front: "true"
